Bug 156159 - Hyperlinked objects in Draw can't be Ctrl + clicked to follow the link until file is reloaded
Summary: Hyperlinked objects in Draw can't be Ctrl + clicked to follow the link until ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: implementationError
: 160109 (view as bug list)
Depends on:
Blocks: Hyperlink
  Show dependency treegraph
 
Reported: 2023-07-04 17:05 UTC by Don Matschull
Modified: 2025-09-18 11:18 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
shape hyperlink example (14.76 KB, application/vnd.oasis.opendocument.graphics)
2023-07-04 17:05 UTC, Don Matschull
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Don Matschull 2023-07-04 17:05:17 UTC
Created attachment 188210 [details]
shape hyperlink example

I can add a hyperlink to a shape in Draw.

If I hoover my mouse pointer over this shape, the pointer does not change into a pointing hand and no tooltip appears to indicate that this shape is a hyperlink as happens when I hoover the mouse pointer over a text hyperlink.

When I right click on a text hyperlink, I can select Edit Hyperlink. I am not given this choice if I right click on a shape to which I have applied a hyperlink.

If I export the document as a PDF, I can open the PDF in my PDF reader application and the shape acts link any other hyperlink.

Since this shows that the shape is actually a hyperlink, Draw should treat the shape as any other hyperlink.
Comment 1 Don Matschull 2023-07-04 17:12:39 UTC
This is interesting. 

I tried opening the attachment I included. When I open it in Draw and hoover the mouse pointer over the shape, the mouse pointer changes to a pointing hand and the tooltip appears. However, if I right click on the shape, I am still not given the choice to Edit Hyperlink.

However, if I open the original file in Draw, the shape is still not treated as a hyperlink at all.
Comment 2 Stéphane Guillou (stragu) 2023-07-04 21:27:20 UTC
Testing in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e4e5fb4b2935e395c7e4b3a794d544a6f44709ce
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

I can confirm:
- The shape can't be Ctrl + clicked when adding the hyperlinked. One needs to save and reload the file to be able to use the hyperlink.
- The "Edit hyperlink" is missing in the context menu. However, I think this could be tracked in the related issue with Edit > Hyperlink being greyed: bug 88918.

One odd thing is that, if I am editing the text box below the shape in your attachment, a single click on the shape (without Ctrl) is sufficient to open the link in browser.

Ability to interact with the shape as any other link was implemented by Samuel in 7.3 with 9a04703b22f9ffb11256d715f65e79a6a2417e18.

Samuel, can you please have a look?
Comment 3 Stéphane Guillou (stragu) 2024-03-14 13:00:37 UTC
*** Bug 160109 has been marked as a duplicate of this bug. ***
Comment 4 Stéphane Guillou (stragu) 2024-03-14 13:09:40 UTC
Same with other objects like images and charts.
Comment 5 Commit Notification 2025-09-12 09:57:35 UTC
Maya Stephens committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2cbe0bdb0f4f4048227b9b8ff6463ca661eafc54

tdf#156159: Properly set hyperlinks with draw/impress shapes/images

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2025-09-16 10:54:10 UTC
i believe Maya fixed it!

note that clicking only activates the link if the shape with the link is *not* selected - this is the same as in Calc / Writer.

there is still some oddity here however: with the commit https://gerrit.libreoffice.org/c/core/+/119164 in 2021 a member SdrObject::msHyperlink was added - but the SdrObject may already have a SvxURLField in its itemset with id EE_FEATURE_FIELD; the itemsets are created by factories like CustomShapeProperties::CreateObjectSpecificItemSet() and the most used ones appear to allow EE_FEATURE_FIELD - it's unclear why this duplication exists
Comment 7 Samuel Mehrbrodt 2025-09-18 06:01:52 UTC
(In reply to Michael Stahl from comment #6)
> there is still some oddity here however: with the commit
> https://gerrit.libreoffice.org/c/core/+/119164 in 2021 a member
> SdrObject::msHyperlink was added - but the SdrObject may already have a
> SvxURLField in its itemset with id EE_FEATURE_FIELD; the itemsets are
> created by factories like
> CustomShapeProperties::CreateObjectSpecificItemSet() and the most used ones
> appear to allow EE_FEATURE_FIELD - it's unclear why this duplication exists

Probably because of missing knowledge about the EE_FEATURE_FIELD :)
So the duplication can be removed - is that something Maya can do too? Or an easy hack to be filed?
Comment 8 Michael Stahl 2025-09-18 11:18:17 UTC
(In reply to Samuel Mehrbrodt from comment #7)

> So the duplication can be removed - is that something Maya can do too? Or an
> easy hack to be filed?

possibly eventually, but not now - internship has ended - probably easyhack is worthwhile...