tdf#156159: Properly set hyperlinks with draw/impress shapes/images

Actually call setHyperlink when executing a SID_HYPERLINK_SETLINK command. For some reason, the hyperlink is stored twice, but only stored in one of them. This causes the hyperlinks to not be clickable/updated after being set until the document is saved and loaded.

Change-Id: I6a6a696438bff2acdc81e72cd00a34c54f016f2b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190074
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>